--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bitcoin-com/bitcoincash-zmq-decoder.git"
+    "url": "git+https://github.com/Permissionless-Software-Foundation/bitcoincash-zmq-decoder.git"
   },
   "keywords": [
     "bitcoin",
     "transaction",
     "rawtx"
   ],
-  "author": "Gabriel Cardona @ bitcoin.com",
+  "author": "Chris Troutner <chris.troutner@gmail.com>",
+  "contributors": [
+    "Gabriel Cardona"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bitcoin-com/bitcoincash-zmq-decoder/issues"
+    "url": "https://github.com/Permissionless-Software-Foundation/bitcoincash-zmq-decoder/issues"
   },
-  "homepage": "https://github.com/Bitcoin-com/bitcoincash-zmq-decoder#readme"
+  "homepage": "https://github.com/Permissionless-Software-Foundation/bitcoincash-zmq-decoder#readme"
 }
